# NexusSignal

./: .env.example  .gitignore  PHASE3_README.md  PHASE3_V2_README.md  QUICKSTART_V2.md  README.md  RESTRUCTURING_COMPLETE.md  UPGRADE_SUMMARY.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.history/: .gitignore_20251206222401  RESTRUCTURING_COMPLETE_20251206003614.md
.history/nexus2/: README_20251206001429.md  README_20251206001609.md
backend/app/: __init__.py  cache.py  config.py  db.py  main.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
nexus2/: __init__.py  config.py  config_default.yaml  run_training.py
nexus2/data/: __init__.py  fractional_diff.py
nexus2/features/: __init__.py  builder.py  entropy.py  microstructure.py  regime.py
nexus2/labeling/: __init__.py  meta_labeling.py  triple_barrier.py
nexus2/models/: __init__.py  classifier.py  mdn.py  quantile_nn.py
nexus2/pipeline/: __init__.py  trainer.py
nexus2/scripts/: __init__.py  download_raw_data.py
nexus2/signals/: __init__.py  generator.py  sizing.py
nexus2/utils/: __init__.py  data_loader.py  logging.py
nexus2/validation/: __init__.py  cpcv.py  metrics.py
scripts/: fetch_history_yahoo.py  fetch_news.py  fetch_tiingo_history.py  run_full_data_build.py  test_connections.py  update_tiingo_intraday.py
scripts/features/: __init__.py  build_features.py  indicators.py  run_feature_build.py  utils.py
scripts/models/: __init__.py  advanced_ensemble.py  advanced_features.py  advanced_neural_models.py  advanced_preprocessing.py  advanced_validation.py  compare_v1_v2.py  test_phase3.py  test_phase3_v2.py  (+3 more)
(+76 files in other folders)
